k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: juro-dora-test
  namespace: juro-dora-test
  labels:
    app: juro-dora-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: juro-dora-test.e2e-cluster.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: juro-dora-test
                port:
                  name: http
